// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing should change the greeting when the user is changed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          Welcome, 
          Bruce
          !
</h2>,
        <div
          className="center-links"
>
          <div
                    className="selection"
          >
                    <a
                              href="/DataEntry"
                    >
                              <div>
                                        Add Data
                                        <img
                                                  alt="logo"
                                                  src="folder.svg"
                                        />
                              </div>
                    </a>
          </div>
          <div
                    className="selection"
          >
                    <a
                              href="/Reports"
                    >
                              <div>
                                        Reports
                                        <img
                                                  alt="logo"
                                                  src="line-chart.svg"
                                        />
                              </div>
                    </a>
          </div>
          <div
                    className="selection"
          >
                    <a
                              href="/ViewAll"
                    >
                              <div>
                                        Edit Data
                                        <img
                                                  alt="logo"
                                                  src="archive.svg"
                                        />
                              </div>
                    </a>
          </div>
</div>,
      ],
      "className": "Landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Welcome, ",
            "Bruce",
            "!",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Welcome, ",
          "Bruce",
          "!",
        ],
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="selection"
>
              <a
                            href="/DataEntry"
              >
                            <div>
                                          Add Data
                                          <img
                                                        alt="logo"
                                                        src="folder.svg"
                                          />
                            </div>
              </a>
</div>,
            <div
              className="selection"
>
              <a
                            href="/Reports"
              >
                            <div>
                                          Reports
                                          <img
                                                        alt="logo"
                                                        src="line-chart.svg"
                                          />
                            </div>
              </a>
</div>,
            <div
              className="selection"
>
              <a
                            href="/ViewAll"
              >
                            <div>
                                          Edit Data
                                          <img
                                                        alt="logo"
                                                        src="archive.svg"
                                          />
                            </div>
              </a>
</div>,
          ],
          "className": "center-links",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="/DataEntry"
>
                <div>
                                Add Data
                                <img
                                                alt="logo"
                                                src="folder.svg"
                                />
                </div>
</a>,
              "className": "selection",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Add Data
                  <img
                                    alt="logo"
                                    src="folder.svg"
                  />
</div>,
                "href": "/DataEntry",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Add Data",
                    <img
                      alt="logo"
                      src="folder.svg"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Add Data",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "logo",
                      "src": "folder.svg",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                ],
                "type": "div",
              },
              "type": "a",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="/Reports"
>
                <div>
                                Reports
                                <img
                                                alt="logo"
                                                src="line-chart.svg"
                                />
                </div>
</a>,
              "className": "selection",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Reports
                  <img
                                    alt="logo"
                                    src="line-chart.svg"
                  />
</div>,
                "href": "/Reports",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Reports",
                    <img
                      alt="logo"
                      src="line-chart.svg"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Reports",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "logo",
                      "src": "line-chart.svg",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                ],
                "type": "div",
              },
              "type": "a",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="/ViewAll"
>
                <div>
                                Edit Data
                                <img
                                                alt="logo"
                                                src="archive.svg"
                                />
                </div>
</a>,
              "className": "selection",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Edit Data
                  <img
                                    alt="logo"
                                    src="archive.svg"
                  />
</div>,
                "href": "/ViewAll",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Edit Data",
                    <img
                      alt="logo"
                      src="archive.svg"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Edit Data",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "logo",
                      "src": "archive.svg",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                ],
                "type": "div",
              },
              "type": "a",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            Welcome, 
            Bruce
            !
</h2>,
          <div
            className="center-links"
>
            <div
                        className="selection"
            >
                        <a
                                    href="/DataEntry"
                        >
                                    <div>
                                                Add Data
                                                <img
                                                            alt="logo"
                                                            src="folder.svg"
                                                />
                                    </div>
                        </a>
            </div>
            <div
                        className="selection"
            >
                        <a
                                    href="/Reports"
                        >
                                    <div>
                                                Reports
                                                <img
                                                            alt="logo"
                                                            src="line-chart.svg"
                                                />
                                    </div>
                        </a>
            </div>
            <div
                        className="selection"
            >
                        <a
                                    href="/ViewAll"
                        >
                                    <div>
                                                Edit Data
                                                <img
                                                            alt="logo"
                                                            src="archive.svg"
                                                />
                                    </div>
                        </a>
            </div>
</div>,
        ],
        "className": "Landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Welcome, ",
              "Bruce",
              "!",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Welcome, ",
            "Bruce",
            "!",
          ],
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="selection"
>
                <a
                                href="/DataEntry"
                >
                                <div>
                                                Add Data
                                                <img
                                                                alt="logo"
                                                                src="folder.svg"
                                                />
                                </div>
                </a>
</div>,
              <div
                className="selection"
>
                <a
                                href="/Reports"
                >
                                <div>
                                                Reports
                                                <img
                                                                alt="logo"
                                                                src="line-chart.svg"
                                                />
                                </div>
                </a>
</div>,
              <div
                className="selection"
>
                <a
                                href="/ViewAll"
                >
                                <div>
                                                Edit Data
                                                <img
                                                                alt="logo"
                                                                src="archive.svg"
                                                />
                                </div>
                </a>
</div>,
            ],
            "className": "center-links",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/DataEntry"
>
                  <div>
                                    Add Data
                                    <img
                                                      alt="logo"
                                                      src="folder.svg"
                                    />
                  </div>
</a>,
                "className": "selection",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div>
                    Add Data
                    <img
                                        alt="logo"
                                        src="folder.svg"
                    />
</div>,
                  "href": "/DataEntry",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Add Data",
                      <img
                        alt="logo"
                        src="folder.svg"
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Add Data",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "logo",
                        "src": "folder.svg",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                  ],
                  "type": "div",
                },
                "type": "a",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/Reports"
>
                  <div>
                                    Reports
                                    <img
                                                      alt="logo"
                                                      src="line-chart.svg"
                                    />
                  </div>
</a>,
                "className": "selection",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div>
                    Reports
                    <img
                                        alt="logo"
                                        src="line-chart.svg"
                    />
</div>,
                  "href": "/Reports",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Reports",
                      <img
                        alt="logo"
                        src="line-chart.svg"
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Reports",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "logo",
                        "src": "line-chart.svg",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                  ],
                  "type": "div",
                },
                "type": "a",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/ViewAll"
>
                  <div>
                                    Edit Data
                                    <img
                                                      alt="logo"
                                                      src="archive.svg"
                                    />
                  </div>
</a>,
                "className": "selection",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div>
                    Edit Data
                    <img
                                        alt="logo"
                                        src="archive.svg"
                    />
</div>,
                  "href": "/ViewAll",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Edit Data",
                      <img
                        alt="logo"
                        src="archive.svg"
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Edit Data",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "logo",
                        "src": "archive.svg",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                  ],
                  "type": "div",
                },
                "type": "a",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Landing should match snapshot upon load 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          Welcome, 
          Ulyana
          !
</h2>,
        <div
          className="center-links"
>
          <div
                    className="selection"
          >
                    <a
                              href="/DataEntry"
                    >
                              <div>
                                        Add Data
                                        <img
                                                  alt="logo"
                                                  src="folder.svg"
                                        />
                              </div>
                    </a>
          </div>
          <div
                    className="selection"
          >
                    <a
                              href="/Reports"
                    >
                              <div>
                                        Reports
                                        <img
                                                  alt="logo"
                                                  src="line-chart.svg"
                                        />
                              </div>
                    </a>
          </div>
          <div
                    className="selection"
          >
                    <a
                              href="/ViewAll"
                    >
                              <div>
                                        Edit Data
                                        <img
                                                  alt="logo"
                                                  src="archive.svg"
                                        />
                              </div>
                    </a>
          </div>
</div>,
      ],
      "className": "Landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Welcome, ",
            "Ulyana",
            "!",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Welcome, ",
          "Ulyana",
          "!",
        ],
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="selection"
>
              <a
                            href="/DataEntry"
              >
                            <div>
                                          Add Data
                                          <img
                                                        alt="logo"
                                                        src="folder.svg"
                                          />
                            </div>
              </a>
</div>,
            <div
              className="selection"
>
              <a
                            href="/Reports"
              >
                            <div>
                                          Reports
                                          <img
                                                        alt="logo"
                                                        src="line-chart.svg"
                                          />
                            </div>
              </a>
</div>,
            <div
              className="selection"
>
              <a
                            href="/ViewAll"
              >
                            <div>
                                          Edit Data
                                          <img
                                                        alt="logo"
                                                        src="archive.svg"
                                          />
                            </div>
              </a>
</div>,
          ],
          "className": "center-links",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="/DataEntry"
>
                <div>
                                Add Data
                                <img
                                                alt="logo"
                                                src="folder.svg"
                                />
                </div>
</a>,
              "className": "selection",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Add Data
                  <img
                                    alt="logo"
                                    src="folder.svg"
                  />
</div>,
                "href": "/DataEntry",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Add Data",
                    <img
                      alt="logo"
                      src="folder.svg"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Add Data",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "logo",
                      "src": "folder.svg",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                ],
                "type": "div",
              },
              "type": "a",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="/Reports"
>
                <div>
                                Reports
                                <img
                                                alt="logo"
                                                src="line-chart.svg"
                                />
                </div>
</a>,
              "className": "selection",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Reports
                  <img
                                    alt="logo"
                                    src="line-chart.svg"
                  />
</div>,
                "href": "/Reports",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Reports",
                    <img
                      alt="logo"
                      src="line-chart.svg"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Reports",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "logo",
                      "src": "line-chart.svg",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                ],
                "type": "div",
              },
              "type": "a",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="/ViewAll"
>
                <div>
                                Edit Data
                                <img
                                                alt="logo"
                                                src="archive.svg"
                                />
                </div>
</a>,
              "className": "selection",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  Edit Data
                  <img
                                    alt="logo"
                                    src="archive.svg"
                  />
</div>,
                "href": "/ViewAll",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Edit Data",
                    <img
                      alt="logo"
                      src="archive.svg"
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Edit Data",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "logo",
                      "src": "archive.svg",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                ],
                "type": "div",
              },
              "type": "a",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            Welcome, 
            Ulyana
            !
</h2>,
          <div
            className="center-links"
>
            <div
                        className="selection"
            >
                        <a
                                    href="/DataEntry"
                        >
                                    <div>
                                                Add Data
                                                <img
                                                            alt="logo"
                                                            src="folder.svg"
                                                />
                                    </div>
                        </a>
            </div>
            <div
                        className="selection"
            >
                        <a
                                    href="/Reports"
                        >
                                    <div>
                                                Reports
                                                <img
                                                            alt="logo"
                                                            src="line-chart.svg"
                                                />
                                    </div>
                        </a>
            </div>
            <div
                        className="selection"
            >
                        <a
                                    href="/ViewAll"
                        >
                                    <div>
                                                Edit Data
                                                <img
                                                            alt="logo"
                                                            src="archive.svg"
                                                />
                                    </div>
                        </a>
            </div>
</div>,
        ],
        "className": "Landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Welcome, ",
              "Ulyana",
              "!",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Welcome, ",
            "Ulyana",
            "!",
          ],
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="selection"
>
                <a
                                href="/DataEntry"
                >
                                <div>
                                                Add Data
                                                <img
                                                                alt="logo"
                                                                src="folder.svg"
                                                />
                                </div>
                </a>
</div>,
              <div
                className="selection"
>
                <a
                                href="/Reports"
                >
                                <div>
                                                Reports
                                                <img
                                                                alt="logo"
                                                                src="line-chart.svg"
                                                />
                                </div>
                </a>
</div>,
              <div
                className="selection"
>
                <a
                                href="/ViewAll"
                >
                                <div>
                                                Edit Data
                                                <img
                                                                alt="logo"
                                                                src="archive.svg"
                                                />
                                </div>
                </a>
</div>,
            ],
            "className": "center-links",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/DataEntry"
>
                  <div>
                                    Add Data
                                    <img
                                                      alt="logo"
                                                      src="folder.svg"
                                    />
                  </div>
</a>,
                "className": "selection",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div>
                    Add Data
                    <img
                                        alt="logo"
                                        src="folder.svg"
                    />
</div>,
                  "href": "/DataEntry",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Add Data",
                      <img
                        alt="logo"
                        src="folder.svg"
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Add Data",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "logo",
                        "src": "folder.svg",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                  ],
                  "type": "div",
                },
                "type": "a",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/Reports"
>
                  <div>
                                    Reports
                                    <img
                                                      alt="logo"
                                                      src="line-chart.svg"
                                    />
                  </div>
</a>,
                "className": "selection",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div>
                    Reports
                    <img
                                        alt="logo"
                                        src="line-chart.svg"
                    />
</div>,
                  "href": "/Reports",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Reports",
                      <img
                        alt="logo"
                        src="line-chart.svg"
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Reports",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "logo",
                        "src": "line-chart.svg",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                  ],
                  "type": "div",
                },
                "type": "a",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/ViewAll"
>
                  <div>
                                    Edit Data
                                    <img
                                                      alt="logo"
                                                      src="archive.svg"
                                    />
                  </div>
</a>,
                "className": "selection",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div>
                    Edit Data
                    <img
                                        alt="logo"
                                        src="archive.svg"
                    />
</div>,
                  "href": "/ViewAll",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Edit Data",
                      <img
                        alt="logo"
                        src="archive.svg"
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Edit Data",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "logo",
                        "src": "archive.svg",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                  ],
                  "type": "div",
                },
                "type": "a",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
